--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     </ul>
     <button>Add item</button>
     
-    <script src="main.js"></script>
+    <script src="js/quicksort.js"></script>
 </body>
 </html>
